--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de">
 <head>
 	<title>Selbstorganisierende System</title>
-	<script type="text/javascript" src="basis.js"></script>
+	<!--<script type="text/javascript" src="basis.js"></script>-->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 	<script type="text/javascript" src="canvas.js"></script>
 	<script type="text/javascript" src="motelist.js"></script>
 	<script type="text/javascript" src="mote.js"></script>
