improved design; adjusted canvas to widescreen ratio; TODO: check rotation works

--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,10 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de">
 <head>
-	<title>Selbstorganisierende System</title>
+	<title>Selbstorganisierende Systeme</title>
+	<style>
+	  html, body { margin: 5px 0 0 7px; padding: 0; background-color: #0c1021; }
+	</style>
 	<!--<script type="text/javascript" src="basis.js"></script>-->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 	<script type="text/javascript" src="canvas.js"></script>
@@ -11,9 +14,9 @@
 	<script type="text/javascript" src="mote_head.js"></script>
 	<script type="text/javascript" src="mote_member.js"></script>
 	<script type="text/javascript" src="init.js"></script>
-	
+
 </head>
 <body>
-	
+
 </body>
 </html>
