included most recent jQuery version fixed some browser problems by using a jQuery function

--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 	  html, body { margin: 5px 0 0 7px; padding: 0; background-color: #0c1021; }
 	</style>
 	<!--<script type="text/javascript" src="basis.js"></script>-->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery-1.6.1.min.js"></script>
 	<script type="text/javascript" src="canvas.js"></script>
 	<script type="text/javascript" src="motelist.js"></script>
 	<script type="text/javascript" src="mote.js"></script>
