--- a/index.htm
+++ b/index.htm
@@ -2,18 +2,19 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de">
 <head>
-	<title>Selbstorganisierende Systeme</title>
-	<style>
-	  html, body { margin: 5px 0 0 7px; padding: 0; background-color: #0c1021; }
-	</style>
-	<!--<script type="text/javascript" src="basis.js"></script>-->
-	<script type="text/javascript" src="jquery-1.6.1.min.js"></script>
-	<script type="text/javascript" src="canvas.js"></script>
-	<script type="text/javascript" src="motelist.js"></script>
-	<script type="text/javascript" src="mote.js"></script>
-	<script type="text/javascript" src="mote_head.js"></script>
-	<script type="text/javascript" src="mote_member.js"></script>
-	<script type="text/javascript" src="init.js"></script>
+    <title>Selbstorganisierende Systeme</title>
+    <style type="text/css">
+        html { margin: 5px 0 0 5px; padding: 0; }
+        body { margin: 0; padding: 0; background-color: #0c1021; }
+    </style>
+    <!--<script type="text/javascript" src="basis.js"></script>-->
+    <script type="text/javascript" src="jquery-1.6.1.min.js"></script>
+    <script type="text/javascript" src="canvas.js"></script>
+    <script type="text/javascript" src="motelist.js"></script>
+    <script type="text/javascript" src="mote.js"></script>
+    <script type="text/javascript" src="mote_head.js"></script>
+    <script type="text/javascript" src="mote_member.js"></script>
+    <script type="text/javascript" src="init.js"></script>
 
 </head>
 <body>
